modify url-mapping in web.xml

--- a/spring_mvc/mvc/pom.xml
+++ b/spring_mvc/mvc/pom.xml
@@ -157,6 +157,9 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.1</version>
+				<configuration>
+					<port>8181</port>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
