--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -122,6 +122,14 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
+
+		<!-- Mysql -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
