--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -129,6 +129,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 		</dependency>
+		<!-- MyBatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
