--- a/blueberry/src/main/webapp/WEB-INF/web.xml
+++ b/blueberry/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>*.jh</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 	<filter>
