--- a/blueberry/.settings/org.eclipse.core.resources.prefs
+++ b/blueberry/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/WEB-INF/views/common/header.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/common/self_script.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/views/common/summernote.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/main.jsp=UTF-8
