--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -190,6 +190,7 @@
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
+					<encoding>utf-8</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
