--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -157,6 +157,14 @@
 			<artifactId>mybatis</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+
+		<!-- Hibernate Validator -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.1.Final</version>
+		</dependency>
+
 		<!-- XSS -->
 		<dependency>
 			<groupId>com.navercorp.lucy</groupId>
