--- a/blueberry/src/main/webapp/WEB-INF/web.xml
+++ b/blueberry/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<!-- Spring security -->
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
@@ -52,5 +52,15 @@
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+	<!-- Filter for PUT, DELETE method -->
+	<filter>
+		<filter-name>httpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>httpMethodFilter</filter-name>
+		<servlet-name>/*</servlet-name>
 	</filter-mapping>
 </web-app>
