--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -164,6 +164,12 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.2.1.Final</version>
 		</dependency>
+		<!-- Jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
