--- a/boot/demo/pom.xml
+++ b/boot/demo/pom.xml
@@ -58,6 +58,10 @@
 			<version>0.7.5</version>
 		</dependency>
 		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			</dependency>
+		<dependency>
 			<groupId>org.neo4j</groupId>
 			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
 			<version>2.1.5</version>
