--- a/blueberry/pom.xml
+++ b/blueberry/pom.xml
@@ -142,6 +142,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.4</version>
 		</dependency>
+		<!-- Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
