--- a/blueberry/src/main/webapp/WEB-INF/web.xml
+++ b/blueberry/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+version="3.0"> 
 
 	<!-- The definition of the Root Spring Container shared by all Servlets 
 		and Filters -->
@@ -66,9 +66,12 @@
 		<filter-name>httpMethodFilter</filter-name>
 		<servlet-name>/*</servlet-name>
 	</filter-mapping>
-	<!-- Handle errors -->
 	<error-page>
-		<exception-type>org.springframework.security.web.authentication.rememberme.CookieTheftException</exception-type>
-		<location>/WEB-INF/views/login.jsp?error=sessionExpired</location>
+		<error-code>403</error-code>
+		<location>/WEB-INF/views/errors/403.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/errors/404.jsp</location>
 	</error-page>
 </web-app>
